test now run in cloudlink environment