@@ -31,9 +31,8 @@
  */
 package com.gluonhq.strange.gate;
 
-import com.gluonhq.strange.Complex;
 import com.gluonhq.strange.Gate;
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -79,7 +78,7 @@ public abstract class TwoQubitGate implements Gate {
         
     @Override
     public List<Integer> getAffectedQubitIndex() {
-        return List.of(first, second);
+        return Arrays.asList(first, second);
     }
     
     @Override
