@@ -1,12 +1,12 @@
 package com.gluonhq.strange.cloudlink;
 
-import java.util.List;
+import java.util.Collections;
 
 public class Identity extends Gate {
 
-
-
     public Identity(int idx) {
-        super("I", "SingleQubit", List.of());
+        super("I", "SingleQubit", Collections.emptyList());
+
+        setAffectedQubitIndex(Collections.singletonList(idx));
     }
 }
